--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
             <div class="fields"><input type="password" placeholder="Password" /></div>
             <div class="fields"><input type="password" placeholder="Confirm Password" /></div>
             <button type="submit">Submit</button>
+            <br>
 
             <div class="row">
                 <div class="column">
                   <img src="../Forms/assets/ama.png" alt="Amazon" style="width: 40px;">
                 </div>
                 <div class="column">
-                  <img src="../Forms/assets/face.jpg" alt="Facebook" style="width: 30px;">
+                  <img src="../Forms/assets/face.jpg" alt="Facebook" style="width: 30px; border-radius: 30%;">
                 </div>
                 <div class="column">
                   <img src="../Forms/assets/insta.jpg" alt="Instagram" style="width: 30px;" >
                 </div>
                 <div class="column">
-                    <img src="../Forms/assets/twit.jpg" alt="Twitter" style="width: 40px;">
+                    <img src="../Forms/assets/twit.jpg" alt="Twitter" style="width: 40px; border-radius: 20%;">
                   </div>
               </div>
 
