--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="row">
                 <div class="column">
-                  <img src="ama.png" alt="Amazon" style="width: 40px;">
+                  <img src="./ama.png" alt="Amazon" style="width: 40px;">
                 </div>
                 <div class="column">
                   <img src="../Forms/assets/face.jpg" alt="Facebook" style="width: 30px; border-radius: 30%;">
